--- a/src/main/resources/com/example/cardgameproject/main.fxml
+++ b/src/main/resources/com/example/cardgameproject/main.fxml
@@ -17,7 +17,7 @@
          <children>
             <VBox prefHeight="195.0" prefWidth="600.0">
                <children>
-                  <TextArea fx:id="recipeTextArea" prefHeight="200.0" prefWidth="200.0" promptText="Recipes" text="Recipe text here (can not really write it here ahead of time, will need to use code because editor isn't good to make a sample of what it would look like)" wrapText="true">
+                  <TextArea fx:id="recipeTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" promptText="Recipes" text="Recipe text here (can not really write it here ahead of time, will need to use code because editor isn't good to make a sample of what it would look like)" wrapText="true">
                      <effect>
                         <InnerShadow />
                      </effect>
