We have a lot of stuff added: missing shop, quests are not actually done, combat is not implememted based on quests.

--- a/src/main/resources/com/example/cardgameproject/shop.fxml
+++ b/src/main/resources/com/example/cardgameproject/shop.fxml
@@ -51,5 +51,6 @@
             </children>
         </VBox>
       <TextArea fx:id="overlayTextArea" editable="false" prefHeight="515.0" prefWidth="700.0" visible="false" />
+      <Label fx:id="goldLabel" layoutX="300.0" layoutY="407.0" prefHeight="48.0" prefWidth="113.0" text="Gold: 100" />
     </children>
 </AnchorPane>
