--- a/src/main/resources/com/example/cardgameproject/main.fxml
+++ b/src/main/resources/com/example/cardgameproject/main.fxml
@@ -14,7 +14,7 @@
             <Image url="@images/screenBackground.png" />
          </image>
       </ImageView>
-      <VBox fx:id="mainVBox" prefHeight="515.0" prefWidth="700.0">
+      <VBox fx:id="mainVBox" prefHeight="515.0" prefWidth="700.0" visible="false">
          <children>
             <VBox prefHeight="195.0" prefWidth="600.0">
                <children>
@@ -161,7 +161,7 @@
             </FlowPane>
          </children>
       </VBox>
-      <VBox fx:id="shopVBox" prefHeight="401.0" prefWidth="700.0">
+      <VBox fx:id="shopVBox" prefHeight="401.0" prefWidth="700.0" visible="false">
          <children>
             <FlowPane fx:id="shopFlowPane" alignment="CENTER" hgap="6.0" prefHeight="264.0" prefWidth="399.0">
                <children>
@@ -184,7 +184,7 @@
       <Label fx:id="discardsLabel" layoutX="370.0" layoutY="385.0" prefHeight="23.0" prefWidth="145.0" text="Label" />
       <Label fx:id="playsLabel" layoutX="183.0" layoutY="382.0" prefHeight="23.0" prefWidth="144.0" text="Label" />
       <TextArea fx:id="overlayTextArea" editable="false" layoutY="1.0" prefHeight="515.0" prefWidth="706.0" visible="false" />
-      <VBox fx:id="selectDeckVBox" prefHeight="515.0" prefWidth="706.0">
+      <VBox fx:id="selectDeckVBox" prefHeight="515.0" prefWidth="706.0" visible="false">
          <children>
             <FlowPane alignment="CENTER" hgap="6.0" prefHeight="510.0" prefWidth="721.0">
                <children>
@@ -201,6 +201,14 @@
          </opaqueInsets>
          <font>
             <Font size="96.0" />
+         </font>
+      </TextArea>
+      <TextArea fx:id="battleTextArea" editable="false" layoutX="10.0" layoutY="369.0" prefHeight="157.0" prefWidth="700.0" text="BattleResults" visible="false" wrapText="true">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <font>
+            <Font size="12.0" />
          </font>
       </TextArea>
    </children>
