--- a/src/main/resources/com/example/cardgameproject/quest.fxml
+++ b/src/main/resources/com/example/cardgameproject/quest.fxml
@@ -14,23 +14,9 @@
         </ImageView>
         <VBox prefHeight="415.0" prefWidth="700.0">
             <children>
-                  <FlowPane fx:id="questFlowPlane" alignment="CENTER" hgap="6.0" prefHeight="326.0" prefWidth="700.0">
+                  <FlowPane fx:id="questFlowPane" alignment="CENTER" hgap="6.0" prefHeight="326.0" prefWidth="700.0">
                <children>
-                  <Label fx:id="quest1Label" prefHeight="90.0" prefWidth="164.0" text="Quest 1: Three 1/4 Silverback Monkeys Reward +4 gold" wrapText="true">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                  </Label>
-                  <Label fx:id="quest2Label" layoutX="278.0" layoutY="128.0" prefHeight="90.0" prefWidth="164.0" text="Quest: Two 5/10 Trolls Reward Gold Card" wrapText="true">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                  </Label>
-                  <Label fx:id="quest3Label" layoutX="363.0" layoutY="128.0" prefHeight="90.0" prefWidth="164.0" text="Quest: Seven 8/9 Hungries Reward Make 2 random cards Glass" wrapText="true">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                  </Label>
+
                </children>
                   </FlowPane>
             <VBox prefHeight="200.0" prefWidth="100.0">
